--- a/Apps/OfConvenio/templates/Proyeccion/ListaProyecto.html
+++ b/Apps/OfConvenio/templates/Proyeccion/ListaProyecto.html
@@ -14,6 +14,9 @@
     </a>
     <h1>Proyecto {{object.nombreProyecto}} </h1>
     </div>
+    <div class="editar">
+       <a class="btn btn-success" href="{% url 'editarProyecto' object.codigo %}" role="button">Editar</a>
+    </div>
 <div class="row">
   <div class="col-sm-6">
     <div class="card">
@@ -48,5 +51,5 @@
     </div>
   </div>
 </div>
- 
+    </div>
 {% endblock body %}
