--- a/ProyeccionSocial/static/Css/Proyeccion/crearProyecto.css
+++ b/ProyeccionSocial/static/Css/Proyeccion/crearProyecto.css
@@ -1,37 +1,35 @@
  :root{
-        --colorTextos: #49454567;
-    }
-     *,
-    ::before,
-    ::after {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    .body {
-        margin-top: 5%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+     --colorTextos: #49454567;
+ }
+ *{
+    margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+ }
+ .body {
+     margin-top: 5%;
+     width: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ }
+ input{
+     background: none;
+     color:#c6c6c6;
+     font-size: 18px;
+     display: block;
+     width: 90%;
+     border:none;
+     border-bottom: 1px solid var(--colorTextos);
+     resize: none;
+ }
+ input:focus{
+     outline: none;
+     color: rgb(94,93,93);
+ }
 
-    }
-    input{
-        background: none;
-        color:#c6c6c6;
-        font-size: 18px;
-        display: block;
-        width: 90%;
-        border:none;
-        border-bottom: 1px solid var(--colorTextos);
-        resize: none;
-    }
-    input:focus{
-        outline: none;
-        color: rgb(94,93,93);
-    }
-    input:focus~label,
-    input:valid~label{
+ input:focus~label,
+ input:valid~label{
     top: -14px;
     font-size: 12px;
     color: #2196F3;
@@ -54,9 +52,8 @@ h1{
     float: left;
     margin-left: -200px;
 }
-  form{
-
-    background: #fff;
+ form{
+     background: #fff;
     border-radius: 10px;
     box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
 }
@@ -71,7 +68,7 @@ h1{
   }
   .volver{
       width: 60px;
-      margin-left: 150px;
+      margin-left: 500px;
   }
 .btn-success{
    margin-left: 75%;
@@ -81,7 +78,7 @@ h1{
 }
 .left{
     float: left;
-    margin-right: 200px;
+    margin-right: 50px;
 }
 .rigth{
     float: right;
