--- a/Apps/OfConvenio/templates/Login.html
+++ b/Apps/OfConvenio/templates/Login.html
@@ -17,7 +17,7 @@
             <form method="post" autocomplete="off" class="sign-in-form">
                 {% csrf_token %}
               <div class="logo">
-                <img src="{% static 'image/aplicaciones.png' %}" alt="easyclass" />
+                <img src="{% static 'image/Inicio/aplicaciones.png' %}" alt="easyclass" />
                 <h4>Proyeccion Social</h4>
               </div>
               <div class="heading">
@@ -42,9 +42,9 @@
 
           <div class="carousel">
             <div class="images-wrapper">
-              <img src="{% static 'image/image1.jpg' %}" class="image img-1 show" alt="" />
-              <img src="{% static 'image/image2.jpg' %}" class="image img-2" alt="" />
-              <img src="{% static 'image/image3.jpg' %}" class="image img-3" alt="" />
+              <img src="{% static 'image/Inicio/image1.jpg' %}" class="image img-1 show" alt="" />
+              <img src="{% static 'image/Inicio/image2.jpg' %}" class="image img-2" alt="" />
+              <img src="{% static 'image/Inicio/image3.jpg' %}" class="image img-3" alt="" />
             </div>
 
             <div class="text-slider">
