--- a/Apps/OfConvenio/templates/Convenio/convenio.html
+++ b/Apps/OfConvenio/templates/Convenio/convenio.html
@@ -49,7 +49,7 @@
         </div>
         <div class="modal-footer">
             <a href="{% url 'inicioConvenio' %}" class="btn btn-danger" role="button" data-dismiss="modal">Cancelar</a>
-            <button class="btn btn-primary" type="submit">Confirmar</button>
+            <button class="btn btn-primary" type="submit">Guardar</button>
         </div>
         </form>
     </div>
