--- a/Apps/OfConvenio/templates/Convenio/crearConvenio.html
+++ b/Apps/OfConvenio/templates/Convenio/crearConvenio.html
@@ -54,7 +54,7 @@
         </div>
         <div class="modal-footer">
             <a href="{% url 'inicioConvenio' %}" class="btn btn-danger" role="button" data-dismiss="modal">Cancelar</a>
-            <button class="btn btn-primary" type="submit">Confirmar</button>
+            <button class="btn btn-primary" type="submit">Crear</button>
         </div>
         </form>
     </div>
