--- a/Apps/OfConvenio/templates/Proyeccion/inicioProyeccion.html
+++ b/Apps/OfConvenio/templates/Proyeccion/inicioProyeccion.html
@@ -1,51 +1,51 @@
 {% extends "Base.html" %}
 {% load static %}
 {% block title %}
-    Lista Proyecto | Proyeccion Social
+Lista Proyecto | Proyeccion Social
 {% endblock title %}
 {% block Css %}
-    <link rel="stylesheet" href="{% static 'Css/Proyeccion/inicioProyeccion.css' %}">
+<link rel="stylesheet" href="{% static 'Css/Proyeccion/inicioProyeccion.css' %}">
 {% endblock Css %}
 {% block body %}
-    <div class="titulo">
+<div class="titulo">
     <img class="gif" src="{% static 'image/gif/GifProyectos.gif' %}" alt="GifDocumento">
-<h1>Proyectos</h1>
-    </div>
+    <h1>Proyectos</h1>
+</div>
 
-    <div class="reporte">
+<div class="reporte">
     <a role="button" href="{% url 'ReporteProyeccion' %}">
         <img class="img" src="{% static 'image/Proyeccion/Reporte.png' %}" alt="ImgReporte"> Generar Reporte
     </a>
-    </div>
+</div>
 
 <div class="card">
     <div class="crear">
         <a href="{% url 'crearProyecto' %}" role="button" class="btn btn-success crear">Crear Proyecto</a>
     </div>
-  <div class="card-body">
-      <img class="gif1"  src="{% static 'image/gif/lista-de-verificacion.gif' %}" alt="GifListado">
-      <h1 class="listado">Listado de proyectos</h1>
-  </div>
+    <div class="card-body">
+        <img class="gif1" src="{% static 'image/gif/lista-de-verificacion.gif' %}" alt="GifListado">
+        <h1 class="listado">Listado de proyectos</h1>
+    </div>
 
 
-<div class="conteiner">
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Fecha</th>
-            <th>Nombre del proyecto</th>
-            <th>Ciudad</th>
-            <th>Institucion</th>
-            <th>Programa</th>
-            <th class="descripcion">Descripcion</th>
-            <th>Opciones</th>
-                  
-        </tr>
-        </thead>
-        {% if object_list%}
+    <div class="conteiner">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Fecha</th>
+                    <th>Nombre del proyecto</th>
+                    <th>Ciudad</th>
+                    <th>Institucion</th>
+                    <th>Programa</th>
+                    <th class="descripcion">Descripcion</th>
+                    <th>Opciones</th>
+
+                </tr>
+            </thead>
+            {% if object_list%}
             <tbody>
-            {% for  ProyectosProyeccionSocial in object_list  %}
+                {% for  ProyectosProyeccionSocial in object_list  %}
                 <tr>
                     <td>{{ ProyectosProyeccionSocial.codigo }}</td>
                     <td>{{ ProyectosProyeccionSocial.fecha}}</td>
@@ -53,35 +53,35 @@
                     <td>{{ ProyectosProyeccionSocial.ciudad }}</td>
                     <td>{{ ProyectosProyeccionSocial.institucion }}</td>
                     <td>{{ ProyectosProyeccionSocial.programa }}</td>
-                    <td  class="descripcion">{{  ProyectosProyeccionSocial.descripcion }}</td>
+                    <td class="descripcion">{{  ProyectosProyeccionSocial.descripcion }}</td>
                     <td>
-                        <a class="btn btn-dark" href="{% url 'editarProyecto' ProyectosProyeccionSocial.codigo %}" role="button">Editar</a>
-                        <a class="btn btn-dark" href="{% url 'verProyecto' ProyectosProyeccionSocial.codigo %}" role="button">Ver proyecto</a>
+                        <a class="btn btn-dark" href="{% url 'editarProyecto' ProyectosProyeccionSocial.codigo %}"
+                            role="button">Editar</a>
+                        <a class="btn btn-dark" href="{% url 'verProyecto' ProyectosProyeccionSocial.codigo %}"
+                            role="button">Ver proyecto</a>
                     </td>
                 </tr>
 
-            {% endfor %}
-                  
-        {% else %}
-            <h1>No hay proyectos registrados</h1>
-        {% endif %}
+                {% endfor %}
+
+                {% else %}
+                <h1>No hay proyectos registrados</h1>
+                {% endif %}
             </tbody>
         </table>
         <ul>
             <li class="li">
                 {% if page_obj.has_previous %}
-                    <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark" role="button">Anterior</a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark" role="button">Anterior</a>
                 {% endif %}
             </li>
             <li class="li">
                 {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark" role="button">Siguiente</a>
+                <a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark" role="button">Siguiente</a>
                 {% endif %}
             </li>
         </ul>
     </div>
 
-    </div>
+</div>
 {% endblock body %}
-
-
