--- a/Apps/OfConvenio/templates/Base.html
+++ b/Apps/OfConvenio/templates/Base.html
@@ -1,69 +1,75 @@
 {% load  static  %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
- {% block title %}
- {% endblock %}
+        {% block title %}
+        {% endblock %}
     </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel=”stylesheet” href=”https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css”>
-    <link rel="shortcut icon" href="{% static 'image/Index/Inicio.png' %}">
+        <link rel="shortcut icon" href="{% static 'image/Index/Inicio.png' %}">
     <link rel="stylesheet" href="{% static 'base/base.css' %}">
-  </head>
+</head>
 
- {% block Css %}
+{% block Css %}
 
- {% endblock%}
+{% endblock%}
 
 </head>
+
 <body>
-  <div class="l-navbar" id="navbar">
-    <nav class="nav">
-        <div>
-            <div class="nav__brand">
-                <ion-icon name="menu-outline" class="nav__toggle" id="nav-toggle"></ion-icon>
-                <a href="{% url 'inicio' %}" class="nav__logo">Proyeccion Social</a>
+    <div class="l-navbar" id="navbar">
+        <nav class="nav">
+            <div>
+                <div class="nav__brand">
+                    <ion-icon name="menu-outline" class="nav__toggle" id="nav-toggle"></ion-icon>
+                    <a href="{% url 'inicio' %}" class="nav__logo">Proyeccion Social</a>
+                </div>
+                <div class="nav__list">
+                    <a href="{% url 'inicio' %}" class="nav__link active">
+                        <ion-icon name="home-outline" class="nav__icon"></ion-icon>
+                        <span class="nav__name">inicio</span>
+                    </a>
+                    <a href="{% url 'inicioProyeccion' %}" class="nav__link">
+                        <ion-icon name="folder-open" class="nav__icon"></ion-icon>
+                        <span class="nav__name">Proyectos</span>
+                    </a>
+
+                    <a href="{% url 'inicioConvenio' %}" class="nav__link">
+                        <ion-icon name="copy" class="nav__icon"></ion-icon>
+                        <span class="nav__name">Convenios</span>
+                    </a>
+                </div>
             </div>
-            <div class="nav__list">
-                <a href="{% url 'inicio' %}" class="nav__link active">
-                    <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                    <span class="nav__name">inicio</span>
-                </a>
-                <a href="{% url 'inicioProyeccion' %}" class="nav__link">
-                    <ion-icon name="folder-open"class="nav__icon"></ion-icon>
-                    <span class="nav__name">Proyectos</span>
-                </a>
 
-                <a href="{% url 'inicioConvenio' %}" class="nav__link">
-                  <ion-icon name="copy" class="nav__icon"></ion-icon>
-                    <span class="nav__name">Convenios</span>
-                </a>
-            </div>
-        </div>
-
-        <a href="{% url 'Cerrar' %}" class="nav__link">
-            <ion-icon name="log-out-outline" class="nav__icon"></ion-icon>
-            <span class="nav__name">Cerrar Sesion </span>
-        </a>
-    </nav>
-  </div>
-      {% block body%}
+            <a href="{% url 'Cerrar' %}" class="nav__link">
+                <ion-icon name="log-out-outline" class="nav__icon"></ion-icon>
+                <span class="nav__name">Cerrar Sesion </span>
+            </a>
+        </nav>
+    </div>
+    {% block body%}
 
 
 
-      {% endblock %}
+    {% endblock %}
 </body>
 <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="{% static 'Java/nvar.js' %}"></script>
 {% block Scripts %}
 
 
 {% endblock Scripts %}
+
 </html>
