--- a/Apps/OfConvenio/templates/Convenio/InicioConvenio.html
+++ b/Apps/OfConvenio/templates/Convenio/InicioConvenio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'Css/Convenio/inicioConvenio.css' %}">
 {% endblock Css %}
 {% block body %}
-    <div class="titulo">
+    <div class="titulo" style="margin-left: 30px;">
         <img class="gif" src="{% static 'image/gif/apreton-de-manos.gif' %}" alt="">
         <h1>Convenios</h1>
     </div>
