--- a/Apps/OfConvenio/templates/Proyeccion/inicioProyeccion.html
+++ b/Apps/OfConvenio/templates/Proyeccion/inicioProyeccion.html
@@ -7,7 +7,7 @@ Lista Proyecto | Proyeccion Social
 <link rel="stylesheet" href="{% static 'Css/Proyeccion/inicioProyeccion.css' %}">
 {% endblock Css %}
 {% block body %}
-<div class="titulo">
+<div class="titulo" style="margin-left: 30px;" >
     <img class="gif" src="{% static 'image/gif/GifProyectos.gif' %}" alt="GifDocumento">
     <h1>Proyectos</h1>
 </div>
