--- a/Apps/OfConvenio/templates/index.html
+++ b/Apps/OfConvenio/templates/index.html
@@ -34,7 +34,7 @@
         margin-top: 40px;
         
     }
-    .btn-primary{
+    .btn-dark{
         margin-right: 100px;
     }
 </style>
@@ -48,7 +48,7 @@
     <p>Elija una opcion para comenzar</p>
 </div>
 <div class="opciones">
-    <a class="btn btn-primary" href="{% url 'inicioProyeccion' %}" role="button">Inicio Proyeccion</a></li>
+    <a class="btn btn-dark" href="{% url 'inicioProyeccion' %}" role="button">Inicio Proyeccion</a></li>
     <a class="btn btn-dark" href="{% url 'inicioConvenio' %}" role="button">Inicio Convenios</a>
 </div>
 {% endblock %}   
