--- a/ProyeccionSocial/static/Css/Proyeccion/listaProyecto.css
+++ b/ProyeccionSocial/static/Css/Proyeccion/listaProyecto.css
@@ -11,4 +11,13 @@
     width: 50px;
     float: left;
 }
+#image{
+    width: 100px;
+}
 
+.card-text{
+    text-align: left;
+    font-weight: 800;
+    margin-top: 10px;
+    font-size: 50px;
+}
