--- a/ProyeccionSocial/static/base/base.css
+++ b/ProyeccionSocial/static/base/base.css
@@ -1,153 +1,306 @@
-@import url("https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css");
-@import url('https://fonts.googleapis.com/css2?family=Hind:wght@500&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    /*===== VARIABLES CSS =====*/
-    :root{
-      --nav-width: 92px;
+:root{
+  /* ===== Colors ===== */
+  --body-color: #E4E9F7;
+  --sidebar-color: #FFF;
+  --primary-color: #695CFE;
+  --primary-color-light: #F6F5FF;
+  --toggle-color: #DDD;
+  --text-color: #707070;
 
-      /*===== Colores =====*/
-      --first-color: #082032;
-      --bg-color: #000000;
-      --sub-color: #B6CEFC;
-      --white-color: #FFF;
+  /* ====== Transition ====== */
+  --tran-03: all 0.2s ease;
+  --tran-03: all 0.3s ease;
+  --tran-04: all 0.3s ease;
+  --tran-05: all 0.3s ease;
+}
 
-      /*===== Fuente y tipografia =====*/
-      --body-font: 'Hind', sans-serif;
-      --normal-font-size: 1rem;
-      --small-font-size: .875rem;
+body{
+  min-height: 100vh;
+  background-color: var(--body-color);
+  transition: var(--tran-05);
+}
 
-      /*===== z index =====*/
-      --z-fixed: 100;
-    }
+::selection{
+  background-color: var(--primary-color);
+  color: #fff;
+}
 
+body.dark{
+  --body-color: #18191a;
+  --sidebar-color: #242526;
+  --primary-color: #3a3b3c;
+  --primary-color-light: #3a3b3c;
+  --toggle-color: #fff;
+  --text-color: #ccc;
+}
 
-    /*===== BASE =====*/
-    *,::before,::after{
-      box-sizing: border-box;
-    }
+/* ===== Sidebar ===== */
+.sidebar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 250px;
+  padding: 10px 14px;
+  background: var(--sidebar-color);
+  transition: var(--tran-05);
+  z-index: 100;  
+}
+.sidebar.close{
+  width: 88px;
+}
 
-    body{
-      position: relative;
-      margin: 0;
-      padding: 2rem 0 0 6.75rem;
-      font-family: var(--body-font);
-      font-size: var(--normal-font-size);
-      transition: .5s;
-    }
-    h1{
-      margin: 0;
-    }
-    ul{
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-    a{
-      text-decoration: none;
-    }
+/* ===== Reusable code - Here ===== */
+.sidebar li{
+  height: 50px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
 
-    /*===== l NAV =====*/
-    .l-navbar{
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: var(--nav-width);
-      height: 100vh;
-      background-color: var(--bg-color);
-      color: var(--white-color);
-      padding: 1.5rem 1.5rem 2rem;
-      transition: .5s;
-      z-index: var(--z-fixed);
-    }
+.sidebar header .image,
+.sidebar .icon{
+  min-width: 60px;
+  border-radius: 6px;
+}
 
-    /*===== NAV =====*/
-    .nav{
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      overflow: hidden;
-    }
-    .nav__brand{
-      display: grid;
-      grid-template-columns: max-content max-content;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 2rem;
-    }
-    .nav__toggle{
-      font-size: 1.25rem;
-      padding: .75rem;
-      cursor: pointer;
-    }
-    .nav__logo{
-      color: var(--white-color);
-      font-weight: 600;
-    }
+.sidebar .icon{
+  min-width: 60px;
+  border-radius: 6px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
 
-    .nav__link{
-      display: grid;
-      grid-template-columns: max-content max-content;
-      align-items: center;
-      column-gap: .75rem;
-      padding: .75rem;
-      color: var(--white-color);
-      border-radius: .5rem;
-      margin-bottom: 1rem;
-      transition: .3s;
-      cursor: pointer;
-    }
-    .nav__link:hover{
-      background-color: var(--first-color);
-    }
-    .nav__icon{
-      font-size: 1.25rem;
-    }
-    .nav__name{
-      font-size: var(--small-font-size);
-    }
+.sidebar .text,
+.sidebar .icon{
+  color: var(--text-color);
+  transition: var(--tran-03);
+}
 
-    /*Expander menu*/
-    .expander{
-      width: calc(var(--nav-width) + 9.25rem);
-    }
+.sidebar .text{
+  font-size: 17px;
+  font-weight: 500;
+  white-space: nowrap;
+  opacity: 1;
+}
+.sidebar.close .text{
+  opacity: 0;
+}
+/* =========================== */
 
-    /*Add padding body*/
-    .body-pd{
-      padding: 2rem 0 0 16rem;
-    }
+.sidebar header{
+  position: relative;
+}
 
-    /*Active links menu*/
-    .active{
-      background-color: var(--first-color);
-    }
+.sidebar header .image-text{
+  display: flex;
+  align-items: center;
+}
+.sidebar header .logo-text{
+  display: flex;
+  flex-direction: column;
+}
+header .image-text .name {
+  margin-top: 2px;
+  font-size: 18px;
+  font-weight: 600;
+}
 
-    /*===== COLLAPSE =====*/
-    .collapse{
-      grid-template-columns: 20px max-content 1fr;
-    }
-    .collapse__link{
-      justify-self: flex-end;
-      transition: .5s;
-    }
-    .collapse__menu{
-      display: none;
-      padding: .75rem 2.25rem;
-    }
-    .collapse__sublink{
-      color: var(--sub-color);
-      font-size: var(--small-font-size);
-    }
-    .collapse__sublink:hover{
-      color: var(--white-color);
-    }
+header .image-text .profession{
+  font-size: 16px;
+  margin-top: -2px;
+  display: block;
+}
 
-    /*Show collapse*/
-    .showCollapse{
-      display: block;
-    }
+.sidebar header .image{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    /*Rotate icon*/
-    .rotate{
-      transform: rotate(180deg);
-    }
+.sidebar header .image img{
+  width: 40px;
+  border-radius: 6px;
+}
+
+.sidebar header .toggle{
+  position: absolute;
+  top: 50%;
+  right: -25px;
+  transform: translateY(-50%) rotate(180deg);
+  height: 25px;
+  width: 25px;
+  background-color: var(--primary-color);
+  color: var(--sidebar-color);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  cursor: pointer;
+  transition: var(--tran-05);
+}
+
+body.dark .sidebar header .toggle{
+  color: var(--text-color);
+}
+
+.sidebar.close .toggle{
+  transform: translateY(-50%) rotate(0deg);
+}
+
+.sidebar .menu{
+  margin-top: 40px;
+}
+
+.sidebar li.search-box{
+  border-radius: 6px;
+  background-color: var(--primary-color-light);
+  cursor: pointer;
+  transition: var(--tran-05);
+}
+
+.sidebar li.search-box input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  border: none;
+  background-color: var(--primary-color-light);
+  color: var(--text-color);
+  border-radius: 6px;
+  font-size: 17px;
+  font-weight: 500;
+  transition: var(--tran-05);
+}
+.sidebar li a{
+  list-style: none;
+  height: 100%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: var(--tran-03);
+}
+
+.sidebar li a:hover{
+  background-color: var(--primary-color);
+}
+.sidebar li a:hover .icon,
+.sidebar li a:hover .text{
+  color: var(--sidebar-color);
+}
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text{
+  color: var(--text-color);
+}
+
+.sidebar .menu-bar{
+  height: calc(100% - 55px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: scroll;
+}
+.menu-bar::-webkit-scrollbar{
+  display: none;
+}
+.sidebar .menu-bar .mode{
+  border-radius: 6px;
+  background-color: var(--primary-color-light);
+  position: relative;
+  transition: var(--tran-05);
+}
+
+.menu-bar .mode .sun-moon{
+  height: 50px;
+  width: 60px;
+}
+
+.mode .sun-moon i{
+  position: absolute;
+}
+.mode .sun-moon i.sun{
+  opacity: 0;
+}
+body.dark .mode .sun-moon i.sun{
+  opacity: 1;
+}
+body.dark .mode .sun-moon i.moon{
+  opacity: 0;
+}
+
+.menu-bar .bottom-content .toggle-switch{
+  position: absolute;
+  right: 0;
+  height: 100%;
+  min-width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.toggle-switch .switch{
+  position: relative;
+  height: 22px;
+  width: 40px;
+  border-radius: 25px;
+  background-color: var(--toggle-color);
+  transition: var(--tran-05);
+}
+
+.switch::before{
+  content: '';
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  background-color: var(--sidebar-color);
+  transition: var(--tran-04);
+}
+
+body.dark .switch::before{
+  left: 20px;
+}
+
+.home{
+  position: absolute;
+  top: 0;
+  top: 0;
+  left: 250px;
+  height: 100vh;
+  width: calc(100% - 250px);
+  background-color: var(--body-color);
+  transition: var(--tran-05);
+}
+.home .text{
+  font-size: 30px;
+  font-weight: 500;
+  color: var(--text-color);
+  padding: 12px 60px;
+}
+
+.sidebar.close ~ .home{
+  left: 78px;
+  height: 100vh;
+  width: calc(100% - 78px);
+}
+body.dark .home .text{
+  color: var(--text-color);
+}
